Update 컨테이너 종료 문제 해결

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     build: 
       context: .
       dockerfile: dockerfile
+    stdin_open: true
+    tty: true
 #  consumer:
 #   container_name: local-consumer
 #    build: 
