--- a/custom_broker/docker-compose.yml
+++ b/custom_broker/docker-compose.yml
@@ -1,1 +1,79 @@
 # 커스텀 인프라 구축
+version: '3'
+services:
+  zookeeper-1:
+    image: elevy/zookeeper:latest
+    environment:
+      MYID: 1
+      SERVERS: zookeeper-1,zookeeper-2,zookeeper-3
+    ports:
+      - "2181:2181"
+      - "2888"
+      - "3888"
+
+  zookeeper-2:
+    image: elevy/zookeeper:latest
+    environment:
+      MYID: 2
+      SERVERS: zookeeper-1,zookeeper-2,zookeeper-3
+    ports:
+      - "2181:2181"
+      - "2888"
+      - "3888"
+
+  zookeeper-3:
+    image: elevy/zookeeper:latest
+    environment:
+      MYID: 3
+      SERVERS: zookeeper-1,zookeeper-2,zookeeper-3
+    ports:
+      - "2181:2181"
+      - "2888"
+      - "3888"
+
+  kafka-1:
+    image: wurstmeister/kafka
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+
+  kafka-2:
+    image: wurstmeister/kafka
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+
+  kafka-3:
+    image: wurstmeister/kafka
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+
+  kafka-bridge:
+    image: sheepkiller/kafka-manager:latest # 교체될 수 있음
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+ 
+  emq:
+    image: emqx/emqx:latests
+
+  elasticsearch:
+
+  logstash:
+    
+  kibana:
+
+  grafana:
+    image: grafana/grafana # 교체될 수 있음
+    ports:
+      - "3000:3000"
+    depends_on:
+      - elasticsearch
